# master_thesis_code

./: .gitignore  00a_ukb_survival_data.py  00b_ukb_extra_data.py  01a_hx_survival_data.py  01b_hx_extra_data.py  02_baseline_stats.R  03_survival_curve.R  04_coxph_forest.R  05_coxph_rcs.R  LICENSE  README.md  pyproject.toml
functions/: __init__.py  coxph_pairwise.R  font_config.R  rcs_coxph.R  surv_expr.py  surv_plot.R  table1_func.R  value_maps.py
