[project]
name = "master-thesis-code"
version = "0.1.0"
description = "This project encompasses all code scripts for my master thesis research."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dowhy>=0.12",
    "fastexcel>=0.12.1",
    "pandas>=2.2.3",
    "polars>=1.20.0",
    "pyarrow>=19.0.0",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "ruff>=0.9.2"]
